# pip-hdl

./: .flake8  .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  run_and_remove.py  tox.ini
.github/workflows/: publish.yml  test.yml
example/: README.md
example/dummy_math_lib/: README.md  pyproject.toml
example/dummy_math_lib/dummy_math_lib/: __init__.py
example/fizzbuzz_agent/: README.md
example/fizzbuzz_agent/fizzbuzz_agent/: filelist.f  fizzbuzz_agent_pkg.sv
example/pack_sv_code/: README.md
example/pack_sv_code/dummy_math_lib/: dummy_math_lib_pkg.sv  filelist.f
example/pack_sv_code_with_dependencies/: README.md  pyproject.toml
example/pack_sv_code_with_dependencies/fizzbuzz_agent/: __init__.py  fizzbuzz_agent_pkg.sv
example/testbench/: Makefile  README.md  requirements.txt  tb.sv
example/use_packed_sv_code/: README.md  tb.sv
pip_hdl/: __init__.py  cli.py  dependencies.py  graph.py  metainfo.py  template.py
template_python_project/: version.py
tests/: test_dummy.py  test_graph.py  test_version.py
